# LatentVision

./: README.md  X_low.npy  app.py  app_latentvision.py  debug_plot.py  pyproject.toml  requirements.txt  viz_space.py
outputs/: colors.json  eval_metrics.json
scripts/: alien_palette.py  evaluate_projection.py
src/expandcolor/: metrics.py  model.py
src/latentvision/: alien_color.py
src/latentvision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
