[project]
name = "latentvision"
version = "0.1.0"
description = "Tools for visualizing and interpreting visual embeddings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yuan Li"}
]

dependencies = [
    "torch",
    "timm",
    "numpy",
    "matplotlib",
    "plotly",
    "umap-learn",
    "scikit-learn",
    "streamlit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
